--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <div class="true-or-false"></div>
 
         <div class="result"></div>
+        <div class="unknown-words">
+          <ol class="unknown-words-list">
+          </ol>
+        </div>
       </div>
     </article>
 
