Add practice mode

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         <div class="result"></div>
         <div class="unknown-words">
+          <button id="practice">Practice Mode</button>
           <ol class="unknown-words-list">
           </ol>
         </div>
